--- a/Styles/login/Form.css
+++ b/Styles/login/Form.css
@@ -48,10 +48,10 @@
 
 .form-box {
   border-radius: 20px;
-  padding: 10px;
+  padding: 5px;
   background: #f5f5f5;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
 }
 
@@ -62,21 +62,21 @@
 }
 
 .form-box.forgotpass h2 {
-  font-size: 2em;
+  font-size: 1.5em;
   text-align: center;
   color: #f2d335;
 }
 .form-box h2 {
-  font-size: 2em;
+  font-size: 1.5rem;
   text-align: center;
   color: #f2d335;
 }
 
 .form-box .input-box {
   position: relative;
-  width: 420px;
+  width: 450px;
   height: 15px;
-  margin: 3rem;
+  margin: 2.5rem;
 }
 
 .form-box .input-box label {
@@ -92,7 +92,9 @@
 
 .form-box .input-box input:focus ~ label,
 .form-box .input-box input:valid ~ label {
-  top: -10px;
+  top: 0px;
+  font-size: 0.6rem;
+  background-color: #fff;
 }
 
 .form-box .input-box input {
@@ -116,7 +118,7 @@
 .form-box .remember-forgot {
   font-size: 0.9em;
   color: #fff;
-  margin: -15px 0 15px;
+  margin: 15px 0 15px 0;
   display: flex;
   justify-content: space-around;
   font-weight: 600;
