--- a/component/ControlHistoryList/ControlHis.css
+++ b/component/ControlHistoryList/ControlHis.css
@@ -1,5 +1,5 @@
 .btn-historyList {
-  height: 100px;
+  height: 30rem;
 }
 .menu-his {
   height: 5vh;
@@ -28,7 +28,22 @@
   border-bottom: 5px solid #f0f0f0;
   display: flex;
   flex-direction: column;
+  position: relative;
 }
+.item-order:hover {
+  background-color: #eee;
+}
+.info__order__detail {
+  position: absolute;
+  right: 20px;
+  bottom: 0;
+  cursor: pointer;
+}
+.p__info__order__detail:hover {
+  text-decoration: underline;
+  color: green;
+}
+
 .item-order .orderleft {
   height: 150px;
   display: flex;
@@ -77,13 +92,13 @@
 }
 
 .product-order .infoProductOrder p {
-  font-size: 1.2rem;
+  font-size: 0.6rem;
   word-wrap: break-word;
   white-space: normal;
 }
 
 .product-order img {
-  height: 129px;
+  height: 130px;
   margin-right: 5px;
   flex: 1;
 }
@@ -93,30 +108,30 @@
 }
 
 .Statusorder {
-  flex: 2;
+  flex: 3;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
-  padding: 0 20px;
+  justify-content: center;
+  padding: 0 10px;
   align-content: flex-end;
 }
 .Statusorder .addressOrder {
-  font-size: 1.8rem;
+  font-size: 1rem;
 }
 .Statusorder p {
-  font-size: 1.5rem;
+  font-size: 1rem;
 }
 
 .StatusButton {
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: flex-end;
   padding: 20px;
 }
 .StatusButton p {
-  font-size: 2rem;
+  font-size: 1rem;
   text-transform: uppercase;
   color: #7f7ffa;
   text-decoration: underline;
