--- a/Styles/staff/Staff.css
+++ b/Styles/staff/Staff.css
@@ -246,6 +246,14 @@
   border-left: 5px solid #dfdfdf;
   border-right: 5px solid #dfdfdf;
   border-bottom: 5px solid #dfdfdf;
+  position: relative;
+}
+
+.senderbtn {
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
+  padding: 10px;
 }
 
 /* notifications__field */
