--- a/component/ChatBox/ChatBox.css
+++ b/component/ChatBox/ChatBox.css
@@ -109,23 +109,11 @@ pre {
   word-wrap: break-word;
 }
 
-/* .chatbox__input {
-  display: flex;
-  align-items: center;
-  padding: 10px;
-  background-color: #f0f0f0;
-} */
-
-.chatbox__input input {
-  flex: 1;
-  margin-right: 10px;
-  padding: 8px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  font-size: 14px;
+.chatbox__input {
+  position: relative;
 }
 
-.chatbox__input button {
+.chatbox__input .btn__sendermess {
   padding: 8px 16px;
   background-color: #007bff;
   color: white;
@@ -133,6 +121,10 @@ pre {
   border-radius: 4px;
   cursor: pointer;
   font-size: 14px;
+  position: absolute;
+  z-index: 1000000;
+  right: 10px;
+  bottom: 10px;
 }
 
 .chatbox__input button:hover {
