--- a/Styles/login/reset.css
+++ b/Styles/login/reset.css
@@ -1,11 +1,10 @@
 .mainReset {
-  margin: 3rem;
+  margin: 1rem;
   width: 100%;
-  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 50rem;
+  height: 40rem;
 }
 .imageBack {
   height: 100%;
@@ -13,7 +12,7 @@
   border-radius: 20px;
   display: flex;
   overflow: hidden;
-  background-image: url("../../../assets/imageLogin.png");
+  background-image: url("../../assets/imageLogin.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
