--- a/component/ChatBox/ChatBox.css
+++ b/component/ChatBox/ChatBox.css
@@ -9,6 +9,17 @@
   border-radius: 50%;
 }
 
+.chatbot_mess {
+  position: fixed;
+  bottom: 100px;
+  left: 20px;
+  z-index: 1000;
+  transition: transform 0.3s ease-in-out;
+  background-color: #ffffff;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
 .chatbox__icon__container {
   display: flex;
   justify-content: center;
