--- a/component/Popover-Menu/FavoriteProductsMenu.module.css
+++ b/component/Popover-Menu/FavoriteProductsMenu.module.css
@@ -9,76 +9,33 @@
   z-index: 1000;
 }
 
-.favoriteProductsMenu ul {
-  list-style: none;
-  padding: 0;
-  width: 100%;
-}
-
-.favoriteProductsMenu ul h3 {
+.favoriteProductsMenu h3 {
   text-align: center;
   color: #ffffff;
   font-style: italic;
 }
 
-.favoriteProductsMenu .li {
+.imgName {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  background-color: #ffffff;
-  margin: 10px 0;
-  padding: 10px;
-  border-radius: 20px;
   width: 100%;
-  cursor: pointer;
+  background-color: #ffffff;
+  border-radius: 20px;
+  margin: 5px;
+  overflow: hidden;
 }
-
-.favoriteProductsMenu li:hover {
+.imgName:hover {
   transform: scale(1.05);
 }
 
-.favoriteProductsMenu ul li .imgName {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.favoriteProductsMenu img {
-  width: 40px;
-  height: 40px;
-  margin-right: 10px;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-}
-
-.namePro,
-.pricePro {
-  font-size: 1.2rem;
-  color: #000;
-}
-
-.favoriteProductsMenu .noFavorite {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #ffffff;
-  width: 100%;
-  border-radius: 10px;
-}
-
-.favoriteProductsMenu span {
-  margin: 0;
-  color: black;
-  font-size: 2rem;
-  text-align: center;
+.namePro {
+  font-size: 1rem;
+  margin: 0 10px;
 }
 
 .btnAllFavoritePro {
-  display: flex;
-  justify-content: flex-end;
   color: white;
 }
-
 .btnAllFavoritePro:hover {
-  color: blue;
+  text-decoration: underline;
 }
