--- a/component/Popover-Menu/ShoppingCartMenu.module.css
+++ b/component/Popover-Menu/ShoppingCartMenu.module.css
@@ -8,64 +8,41 @@
   border-radius: 10px;
   z-index: 1000;
 }
-.shoppingProductsMenu ul {
-  list-style: none;
-  padding: 0;
-  width: 100%;
-}
-.shoppingProductsMenu ul h3 {
+
+.shoppingProductsMenu h3 {
   text-align: center;
   color: #ffffff;
   font-style: italic;
 }
-.shoppingProductsMenu ul li {
+
+.imgName {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  background-color: #ffffff;
-  margin: 10px 0;
-  border-radius: 20px;
   width: 100%;
-  cursor: pointer;
+  background-color: #ffffff;
+  border-radius: 20px;
+  margin: 5px;
+  overflow: hidden;
 }
-.shoppingProductsMenu li:hover {
+.imgName:hover {
   transform: scale(1.05);
 }
-.shoppingProductsMenu ul li .imgName {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.shoppingProductsMenu img {
-  width: 100px;
-  height: 100%;
-  margin-right: 10px;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-}
-.namePro,
-.pricePro {
-  color: #000;
-}
-.shoppingProductsMenu .noFavorite {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #ffffff;
-  width: 100%;
-  border-radius: 10px;
-}
-.shoppingProductsMenu span {
-  margin: 0;
-  color: black;
+
+.namePro {
   font-size: 1rem;
-  text-align: center;
+  margin: 0 10px;
 }
+
 .btnAllFavoritePro {
-  display: flex;
-  justify-content: flex-end;
   color: white;
 }
 .btnAllFavoritePro:hover {
-  color: blue;
+  text-decoration: underline;
+}
+
+.noFavorite {
+  color: white;
+  font-weight: bold;
+  font-size: 1.2rem;
+  text-align: center;
 }
